--- a/package.json
+++ b/package.json
@@ -1,22 +1,43 @@
 {
-  "name": "vikareta-dashboard",
-  "version": "1.0.0",
-  "description": "Vikareta Analytics Dashboard",
+  "name": "vikareta-admin",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@headlessui/react": "^2.2.4",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.303.0",
+    "next": "15.4.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-is": "^18.3.1",
+    "recharts": "^3.1.0",
+    "tailwind-merge": "^2.5.5",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@types/node": "^20.5.0",
-    "@types/react": "^18.2.20",
-    "typescript": "^5.1.6"
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/node": "^22",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9",
+    "eslint-config-next": "15.4.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5"
   }
 }
