--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
+
     "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-query-devtools": "^5.83.0",
     "@tanstack/react-table": "^8.20.5",
@@ -52,7 +51,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^4.0.0-beta.1",
+    "@tailwindcss/postcss": "^4.0.0-beta.1",
     "typescript": "^5"
   }
 }
