--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,6 +18,11 @@ spec:
         image: ghcr.io/aryannkumar/vikareta-dashboard:main
         ports:
         - containerPort: 3001
+        env:
+        - name: PORT
+          value: "3001"
+        - name: NODE_ENV
+          value: "production"
         resources:
           requests:
             memory: "256Mi"
