fix: sync up changes

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,32 +1,62 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: vikareta-dashboard
+  name: dashboard
   namespace: vikareta
+  labels:
+    app: dashboard
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: vikareta-dashboard
+      app: dashboard
   template:
     metadata:
       labels:
-        app: vikareta-dashboard
+        app: dashboard
     spec:
       containers:
-      - name: vikareta-dashboard
-        image: ghcr.io/aryannkumar/vikareta-dashboard:main
+      - name: dashboard
+        image: ghcr.io/aryannkumar/vikareta-dashboard:latest
         ports:
-        - containerPort: 3001
+        - containerPort: 80
         env:
-        - name: PORT
-          value: "3001"
-        - name: NODE_ENV
+        - name: REACT_APP_API_URL
+          value: "https://api.vikareta.com"
+        - name: REACT_APP_ENVIRONMENT
           value: "production"
+        - name: REACT_APP_APP_TYPE
+          value: "dashboard"
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 5
         resources:
           requests:
-            memory: "256Mi"
-            cpu: "250m"
+            memory: "128Mi"
+            cpu: "100m"
           limits:
-            memory: "512Mi"
-            cpu: "500m"
+            memory: "256Mi"
+            cpu: "200m"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: dashboard-service
+  namespace: vikareta
+spec:
+  selector:
+    app: dashboard
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: ClusterIP
