fix: update port configuration to 5741 and switch to Next.js standalone

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 3001",
+    "dev": "next dev --turbopack -p 5741",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 5741",
     "lint": "next lint",
     "analyze": "ANALYZE=true next build"
   },
