--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
     "@next/bundle-analyzer": "^15.4.2",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
-
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-query-devtools": "^5.83.0",
     "@tanstack/react-table": "^8.20.5",
@@ -31,19 +39,22 @@
     "clsx": "^2.1.1",
     "cssnano": "^7.1.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.303.0",
     "next": "15.4.2",
     "node-cron": "^4.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
     "recharts": "^3.1.0",
     "tailwind-merge": "^2.5.5",
-    "zod": "^3.24.1",
+    "zod": "^3.25.76",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.0.0-beta.1",
     "@types/node": "^22",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
@@ -52,7 +63,6 @@
     "eslint-config-next": "15.4.2",
     "postcss": "^8",
     "tailwindcss": "^4.0.0-beta.1",
-    "@tailwindcss/postcss": "^4.0.0-beta.1",
     "typescript": "^5"
   }
 }
