--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/node-cron": "^3.0.11",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
+  "jsonwebtoken": "^9.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cssnano": "^7.1.0",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+  "@types/jsonwebtoken": "^9.0.1",
     "@tailwindcss/postcss": "^4.0.0-beta.1",
     "@types/node": "^22",
     "@types/react": "^18.3.23",
