Refactor dashboard and user-related features
- Removed following and followers endpoints from API constants and navigation items.
- Updated useOrders hook to include orderType filtering and added mock data for product and service orders.
- Cleaned up routing by removing following-related routes.
- Adjusted middleware to exclude following routes from protected routes.
- Deleted old Tailwind CSS configuration and replaced it with a new TypeScript-based configuration.
- Implemented a new DashboardAPI class for fetching various dashboard metrics and analytics.
- Added comprehensive dashboard types for metrics, orders, products, wallet, revenue, activity, notifications, and business KPIs.

--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "@tanstack/react-table": "^8.20.5",
     "@types/axios": "^0.9.36",
     "@types/node-cron": "^3.0.11",
+    "@prisma/client": "^5.22.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
-  "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cssnano": "^7.1.0",
@@ -45,10 +46,12 @@
     "lucide-react": "^0.303.0",
     "next": "15.4.2",
     "node-cron": "^4.2.1",
+    "prisma": "^5.22.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
+    "react-quill": "^2.0.0",
     "recharts": "^3.1.0",
     "tailwind-merge": "^2.5.5",
     "zod": "^3.25.76",
