--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@hookform/resolvers": "^3.10.0",
-    "@next/bundle-analyzer": "^15.4.2",
+    "@hookform/resolvers": "^5.2.1",
+    "@next/bundle-analyzer": "^15.5.0",
     "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.8",
-    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@tanstack/react-query": "^5.62.7",
-    "@tanstack/react-query-devtools": "^5.83.0",
+    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query-devtools": "^5.85.5",
     "@tanstack/react-table": "^8.20.5",
     "@types/axios": "^0.9.36",
     "@types/node-cron": "^3.0.11",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.14.0",
     "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "jsonwebtoken": "^9.0.2",
@@ -43,32 +43,34 @@
     "cssnano": "^7.1.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
-    "lucide-react": "^0.303.0",
-    "next": "15.4.2",
+    "lucide-react": "^0.540.0",
+    "next": "15.5.0",
     "node-cron": "^4.2.1",
-    "prisma": "^5.22.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "prisma": "^6.14.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.60.0",
-    "react-quill": "^2.0.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
+    "@tiptap/pm": "^2.12.0",
     "recharts": "^3.1.0",
-    "tailwind-merge": "^2.5.5",
-    "zod": "^3.25.76",
-    "zustand": "^5.0.6"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.17",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-  "@types/jsonwebtoken": "^9.0.1",
-    "@tailwindcss/postcss": "^4.0.0-beta.1",
-    "@types/node": "^22",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.2",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "15.5.0",
     "postcss": "^8",
-    "tailwindcss": "^4.0.0-beta.1",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5"
   }
 }
